[package]
name = "adblock-rust-server"
description = "Server wrapper around the adblock crate using Unix domain sockets"
version = "0.2.0"
authors = ["Samuel Dudik <dudik@tutanota.com>"]
edition = "2018"
repository = "https://github.com/dudik/adblock-rust-server"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.adblock]
version = "0.3.6"
default-features = false
features = ["embedded-domain-resolver"]

[dependencies.attohttpc]
version = "0.16.3"
